hphp/hack/test/typecheck/nonnull/append_nonnull_and_string.php.exp
File "append_nonnull_and_string.php", line 4, characters 16-17:
This is an object of type Stringish (Typing[4110])
File "append_nonnull_and_string.php", line 3, characters 12-18:
It is incompatible with a nonnull value
