hphp/hack/test/typecheck/nonnull/append_nonnull_and_string.php
<?hh

function f(nonnull $x): string {
  return 'foo'.$x;
}
